--- a/bot/package.json
+++ b/bot/package.json
@@ -17,13 +17,15 @@
     "url": "https://github.com/Vedang18/ProBOT"
   },
   "dependencies": {
-    "botbuilder": "^3.8.2",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
-    "express": "^4.14.0",
-    "pug": "^2.0.0-beta6",
-    "serve-favicon": "^2.3.2",
+    "botbuilder": "^3.8.2",
     "dotenv-extended": "^1.0.4",
-    "lodash": "^4.17.4"
+    "es6-promise": "^4.1.1",
+    "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
+    "pug": "^2.0.0-beta6",
+    "serve-favicon": "^2.3.2"
   }
 }
