--- a/bookingServer/pom.xml
+++ b/bookingServer/pom.xml
@@ -25,6 +25,12 @@
 	</properties>
 
 	<dependencies>
+	    <dependency>
+        <groupId>net.sourceforge.htmlunit</groupId>
+        <artifactId>htmlunit</artifactId>
+        <version>2.27</version>
+    </dependency>
+	
    <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
