Added date ranges for holidays Added order to all holidays

--- a/bookingserver/src/main/resources/application.properties
+++ b/bookingserver/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/probot
+spring.datasource.url=jdbc:postgresql://192.168.2.72:5432/probot
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.tomcat.max-wait=20000
@@ -22,4 +22,4 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.database.driverClassName=org.postgresql.Driver
 
 
-server.port=8080
+server.port=9030
