--- a/bookingserver/pom.xml
+++ b/bookingserver/pom.xml
@@ -26,6 +26,13 @@
 	</properties>
 
 	<dependencies>
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20151123</version>
+</dependency>
+	
 	<dependency>
 		<groupId>log4j</groupId>
 		<artifactId>log4j</artifactId>
