--- a/bot/package.json
+++ b/bot/package.json
@@ -26,6 +26,7 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "log4js": "^2.3.3",
+    "moment": "^2.18.1",
     "pug": "^2.0.0-beta6",
     "serve-favicon": "^2.3.2"
   }
