--- a/bot/package.json
+++ b/bot/package.json
@@ -24,6 +24,7 @@
     "es6-promise": "^4.1.1",
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
+    "dateformat": "^3.0.2",
     "lodash": "^4.17.4",
     "log4js": "^2.3.3",
     "moment": "^2.18.1",
