--- a/bot/.env
+++ b/bot/.env
@@ -5,3 +5,4 @@ MICROSOFT_APP_PASSWORD=zHAJoZN9S0EuU5weJbtV1wv
 LUIS_MODEL_URL=https://southeastasia.api.cognitive.microsoft.com/luis/v2.0/apps/7b57c639-67ce-493f-b203-8dd2809a94c8?subscription-key=25241f97c9424c598e1094cb13af38a5&verbose=true&timezoneOffset=330
 
 PRORIGO_REST_SERVER=http://a5a16c05.ngrok.io
+APP_URL=http://probot-bot.azurewebsites.net
