Added code to limit the number of booking dates.

--- a/bot/.env
+++ b/bot/.env
@@ -6,3 +6,5 @@ LUIS_MODEL_URL=https://southeastasia.api.cognitive.microsoft.com/luis/v2.0/apps/
 
 PRORIGO_REST_SERVER=http://a5a16c05.ngrok.io
 APP_URL=http://probot-bot.azurewebsites.net
+
+MAX_BOOKING_ALLOWED=10
