--- a/bookingserver/src/main/resources/log4j.properties
+++ b/bookingserver/src/main/resources/log4j.properties
@@ -1,8 +1,9 @@
 # Root logger option
-log4j.rootLogger=DEBUG, stdout, file
+log4j.rootLogger=INFO, file
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Threshold=ERROR
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{dd-MM-yyyy HH:mm:ss} %-5p %c{1} - %m%n
