--- a/bot/admin/package.json
+++ b/bot/admin/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "debug": "npm start --debug-brk=1234"
   },
   "homepage": "/admin"
 }
